log
Fri Mar 11 15:39:50 HSP 2022: 
 tests:  0|7
total_score: 0/70
c448578
Fri Mar 11 18:27:51 HSP 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|6
total_score: 10/70
d321798
Fri Mar 11 23:08:18 HSP 2022: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:45:19: error: expected expression before ']' token
          sumaN( a[], n);
                   ^
exercises.c:46:18: error: 'tot' undeclared (first use in this function)
          *suma = tot;
                  ^~~
exercises.c:46:18: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d3abccd
Fri Mar 11 23:11:07 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'sumaNultimos':
exercises.c:48:16: error: 'tot' may be used uninitialized in this function [-Werror=maybe-uninitialized]
          *suma = tot;
          ~~~~~~^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c0c9899
Fri Mar 11 23:13:05 HSP 2022: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
cafe32f
Fri Mar 11 23:21:25 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
218c89f
Fri Mar 11 23:39:02 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3dd76b8
Fri Mar 11 23:40:26 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
aaecd6a
Fri Mar 11 23:49:03 HSP 2022: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
1abb0b8
Fri Mar 11 23:52:39 HSP 2022: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
d280ddc
Sat Mar 12 00:05:18 HSP 2022: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:42:8: error: variable 'cont' set but not used [-Werror=unused-but-set-variable]
    int cont;
        ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8c6119d
Sat Mar 12 00:17:04 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
caf737c
Sat Mar 12 00:19:26 HSP 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
817e9bf
Sat Mar 12 00:29:05 HSP 2022: 
 exercises.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:46:1: error: expected ';' before '}' token
 }
 ^
Compilation failed
37365a9
Sat Mar 12 00:29:31 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
3a59fa9
Sat Mar 12 00:32:37 HSP 2022: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:47:7: error: expected ';' before '}' token
       }
       ^
Compilation failed
3004e1c
Sat Mar 12 00:32:59 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
a1acf80
Sat Mar 12 12:34:37 HSP 2022: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:90:11: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return *vector;
           ^~~~~~~
exercises.c: In function 'asignarValor':
exercises.c:101:20: error: 'n' undeclared (first use in this function)
    for (i = 0; i < n; i++){
                    ^
exercises.c:101:20: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
15e0ed2
Sat Mar 12 12:35:29 HSP 2022: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:90:11: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return vector;
           ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e6c53e6
Sat Mar 12 12:36:48 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:87:17: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int vector = (int *)malloc(sizeof(int));
                 ^
exercises.c:90:11: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return vector;
           ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cf4ed11
Sat Mar 12 12:38:39 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:90:11: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return datos;
           ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6e75200
Sat Mar 12 13:00:33 HSP 2022: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:87:17: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int vector = (int *)malloc(sizeof(int));
                 ^
exercises.c:93:11: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return vector;
           ^~~~~~
exercises.c: In function 'asignarValor':
exercises.c:102:8: error: unused variable 'n' [-Werror=unused-variable]
    int n;
        ^
cc1.exe: all warnings being treated as errors
Compilation failed
e585cc7
Sat Mar 12 13:01:28 HSP 2022: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:87:9: error: unused variable 'vector' [-Werror=unused-variable]
    int *vector = (int *)malloc(sizeof(int));
         ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2a7e4b8
